--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,85 +49,71 @@ LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
 # 设置默认链接块
 set(LINK_LIB_LIST m pthread)
 
+IF(CROSS_COMPILE)
+set(SDL2_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
+set(SDL2_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+ELSE()
 find_package(SDL2 QUIET)
+ENDIF(CROSS_COMPILE)
 if (SDL2_FOUND)
     include_directories(${SDL2_INCLUDE_DIR})
     list(APPEND LINK_LIB_LIST ${SDL2_LIBRARY})
     message(STATUS "found library:${SDL2_LIBRARY}")
 endif (SDL2_FOUND)
 
-find_package(PkgConfig QUIET)
 
-#查找ffmpeg/libutil是否安装
-if(PKG_CONFIG_FOUND)
-    pkg_check_modules(AVUTIL QUIET IMPORTED_TARGET libavutil)
-    if(AVUTIL_FOUND)
-        include_directories(${AVUTIL_INCLUDE_DIRS})
-        link_directories(${AVUTIL_LIBRARY_DIRS})
-        list(APPEND  LINK_LIB_LIST ${AVUTIL_LIBRARIES})
-        message(STATUS "found library:${AVUTIL_LIBRARIES}")
-    endif()
-else()
+
+
+IF(CROSS_COMPILE)
+	set(AVUTIL_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
+	set(AVUTIL_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+ELSE()
     find_package(AVUTIL QUIET)
-    if(AVUTIL_FOUND)
-        include_directories(${AVUTIL_INCLUDE_DIR})
-        list(APPEND  LINK_LIB_LIST ${AVUTIL_LIBRARIES})
-        message(STATUS "found library:${AVUTIL_LIBRARIES}")
-    endif()
+ENDIF(CROSS_COMPILE)
+if(AVUTIL_FOUND)
+	include_directories(${AVUTIL_INCLUDE_DIR})
+	list(APPEND  LINK_LIB_LIST ${AVUTIL_LIBRARIES})
+	message(STATUS "found library:${AVUTIL_LIBRARIES}")
 endif()
 
+
 #查找ffmpeg/libavcodec是否安装
-if(PKG_CONFIG_FOUND)
-    pkg_check_modules(AVCODEC QUIET IMPORTED_TARGET libavcodec)
-    if(AVCODEC_FOUND)
-        include_directories(${AVCODEC_INCLUDE_DIRS})
-        link_directories(${AVCODEC_LIBRARY_DIRS})
-        list(APPEND  LINK_LIB_LIST ${AVCODEC_LIBRARIES})
-        message(STATUS "found library:${AVCODEC_LIBRARIES}")
-    endif()
-else()
+IF(CROSS_COMPILE)
+	set(AVCODEC_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
+	set(_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+ELSE()
     find_package(AVCODEC QUIET)
-    if(AVCODEC_FOUND)
-        include_directories(${AVCODEC_INCLUDE_DIR})
-        list(APPEND  LINK_LIB_LIST ${AVCODEC_LIBRARIES})
-        message(STATUS "found library:${AVCODEC_LIBRARIES}")
-    endif()
+ENDIF(CROSS_COMPILE)
+if(AVCODEC_FOUND)
+	include_directories(${AVCODEC_INCLUDE_DIR})
+	list(APPEND  LINK_LIB_LIST ${AVCODEC_LIBRARIES})
+	message(STATUS "found library:${AVCODEC_LIBRARIES}")
 endif()
 
 #查找ffmpeg/libavfilter 是否安装
-if(PKG_CONFIG_FOUND)
-	pkg_check_modules(AVFILTER QUIET IMPORTED_TARGET libavfilter)
-	if(AVFILTER_FOUND)
-		include_directories(${AVFILTER_INCLUDE_DIRS})
-		link_directories(${AVFILTER_LIBRARY_DIRS})
-		list(APPEND  LINK_LIB_LIST ${AVFILTER_LIBRARIES})
-		message(STATUS "found library:${AVFILTER_LIBRARIES}")
-    endif()
-else()
+IF(CROSS_COMPILE)
+	set(AVFILTER_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
+	set(AVFILTER_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+ELSE()
 	find_package(AVFILTER QUIET)
-	if(AVFILTER_FOUND)
-		include_directories(${AVFILTER_INCLUDE_DIR})
-		list(APPEND  LINK_LIB_LIST ${AVFILTER_LIBRARIES})
-		message(STATUS "found library:${AVFILTER_LIBRARIES}")
-    endif()
+ENDIF(CROSS_COMPILE)
+if(AVFILTER_FOUND)
+	include_directories(${AVFILTER_INCLUDE_DIR})
+	list(APPEND  LINK_LIB_LIST ${AVFILTER_LIBRARIES})
+	message(STATUS "found library:${AVFILTER_LIBRARIES}")
 endif()
 
 #查找ffmpeg/libavformat 是否安装
-if(PKG_CONFIG_FOUND)
-	pkg_check_modules(AVFORMAT QUIET IMPORTED_TARGET libavformat)
-	if(AVFORMAT_FOUND)
-		include_directories(${AVFORMAT_INCLUDE_DIRS})
-		link_directories(${AVFORMAT_LIBRARY_DIRS})
-		list(APPEND  LINK_LIB_LIST ${AVFORMAT_LIBRARIES})
-		message(STATUS "found library:${AVFORMAT_LIBRARIES}")
-    endif()
-else()
+IF(CROSS_COMPILE)
+	set(AVFORMAT_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
+	set(AVFORMAT_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+ELSE()
 	find_package(AVFORMAT QUIET)
-	if(AVFORMAT_FOUND)
-		include_directories(${AVFORMAT_INCLUDE_DIR})
-		list(APPEND  LINK_LIB_LIST ${AVFORMAT_LIBRARIES})
-		message(STATUS "found library:${AVFORMAT_LIBRARIES}")
-    endif()
+ENDIF(CROSS_COMPILE)
+if(AVFORMAT_FOUND)
+	include_directories(${AVFORMAT_INCLUDE_DIR})
+	list(APPEND  LINK_LIB_LIST ${AVFORMAT_LIBRARIES})
+	message(STATUS "found library:${AVFORMAT_LIBRARIES}")
 endif()
 
 
@@ -139,6 +125,7 @@ aux_source_directory(. TEST_SRC_LIST)
 if(SDL2_FOUND AND AVCODEC_FOUND AND AVUTIL_FOUND)
 else()
     message(STATUS "test_player ingored, please install sdl2 ffmpeg/libavcodec ffmpeg/libavutil")
+    list(REMOVE_ITEM TEST_SRC_LIST ./test_player.cpp)
     list(REMOVE_ITEM TEST_SRC_LIST ./test_player.cpp)
 endif()
 
