x86 and arm cross build ok

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,14 @@ endif ()
 LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
 
 
+IF(CROSS_COMPILE)
 # 设置默认链接块
-set(LINK_LIB_LIST m pthread)
+set(LINK_LIB_LIST m pthread avformat avcodec avfilter swresample avutil rga drm rockchip_mpp  z asound v4l2 v4lconvert jpeg)
+message(STATUS "arm corss compile")
+ELSE()
+set(LINK_LIB_LIST m pthread )
+message(STATUS "x86 compile")
+ENDIF(CROSS_COMPILE)
 
 IF(CROSS_COMPILE)
 set(SDL2_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
@@ -59,6 +65,8 @@ if (SDL2_FOUND)
     include_directories(${SDL2_INCLUDE_DIR})
     list(APPEND LINK_LIB_LIST ${SDL2_LIBRARY})
     message(STATUS "found library:${SDL2_LIBRARY}")
+else()
+    message(STATUS "not found library:SDL2_LIBRARY")
 endif (SDL2_FOUND)
 
 
@@ -66,7 +74,8 @@ endif (SDL2_FOUND)
 
 IF(CROSS_COMPILE)
 	set(AVUTIL_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
-	set(AVUTIL_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+	set(AVUTIL_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lavutil")
+	set(AVUTIL_FOUND TRUE)
 ELSE()
     find_package(AVUTIL QUIET)
 ENDIF(CROSS_COMPILE)
@@ -74,13 +83,16 @@ if(AVUTIL_FOUND)
 	include_directories(${AVUTIL_INCLUDE_DIR})
 	list(APPEND  LINK_LIB_LIST ${AVUTIL_LIBRARIES})
 	message(STATUS "found library:${AVUTIL_LIBRARIES}")
+else()
+	message(STATUS "not found library:AVUTIL_LIBRARIES")
 endif()
 
 
 #查找ffmpeg/libavcodec是否安装
 IF(CROSS_COMPILE)
 	set(AVCODEC_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
-	set(_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+	set(_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lavcodec")
+	set(AVCODEC_FOUND TRUE)
 ELSE()
     find_package(AVCODEC QUIET)
 ENDIF(CROSS_COMPILE)
@@ -88,12 +100,15 @@ if(AVCODEC_FOUND)
 	include_directories(${AVCODEC_INCLUDE_DIR})
 	list(APPEND  LINK_LIB_LIST ${AVCODEC_LIBRARIES})
 	message(STATUS "found library:${AVCODEC_LIBRARIES}")
+else()
+	message(STATUS "not found library:AVCODEC_LIBRARIES")
 endif()
 
 #查找ffmpeg/libavfilter 是否安装
 IF(CROSS_COMPILE)
 	set(AVFILTER_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
-	set(AVFILTER_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+	set(AVFILTER_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lavfilter")
+	set(AVFILTER_FOUND 1)
 ELSE()
 	find_package(AVFILTER QUIET)
 ENDIF(CROSS_COMPILE)
@@ -101,12 +116,15 @@ if(AVFILTER_FOUND)
 	include_directories(${AVFILTER_INCLUDE_DIR})
 	list(APPEND  LINK_LIB_LIST ${AVFILTER_LIBRARIES})
 	message(STATUS "found library:${AVFILTER_LIBRARIES}")
+else()
+	message(STATUS "not found library:AVFILTER_LIBRARIES")
 endif()
 
 #查找ffmpeg/libavformat 是否安装
 IF(CROSS_COMPILE)
 	set(AVFORMAT_INCLUDE_DIR   ${SYSROOT_PATH}/usr/include)
-	set(AVFORMAT_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lfaac")
+	set(AVFORMAT_LIBRARIES "-L ${SYSROOT_PATH}/usr/lib -lavformat")
+	set(AVFORMAT_FOUND 1)
 ELSE()
 	find_package(AVFORMAT QUIET)
 ENDIF(CROSS_COMPILE)
@@ -114,6 +132,8 @@ if(AVFORMAT_FOUND)
 	include_directories(${AVFORMAT_INCLUDE_DIR})
 	list(APPEND  LINK_LIB_LIST ${AVFORMAT_LIBRARIES})
 	message(STATUS "found library:${AVFORMAT_LIBRARIES}")
+else()
+	message(STATUS "not found library:AVFORMAT_LIBRARIES")
 endif()
 
 
