--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,7 +177,8 @@ endif()
 
 #list(REMOVE_ITEM TEST_SRC ./sound_card_get.c ./sound_card_get_test.c)
 list(REMOVE_ITEM TEST_SRC_LIST ./sound_card_get.c ./sound_card_get_test.c ./multi_audio_mix.c ./multi_audio_mix_48kin.c ./proc_cmd.cpp  ./t_proc_cmd.cpp ./proc_mix_cmd.cpp ./test_demux.c ./demux.c 
-								./test_demux_audio_player.c ./test_sdl_timer.c ./test_demux_av_player.c)
+								./test_demux_audio_player.c ./test_sdl_timer.c ./test_demux_av_player.c ./audio_recv.c ./five_audio_mix_48kin.c ./audio_play.c ./audio_card_recv.c
+								./test_audio_recv_play.c)
 
 foreach(TEST_SRC ${TEST_SRC_LIST})
     STRING(REGEX REPLACE "^\\./|\\.c[a-zA-Z0-9_]*$" "" TEST_EXE_NAME ${TEST_SRC})
@@ -212,6 +213,19 @@ target_link_libraries(multi_audio_mix_48kin ${LINK_LIB_LIST})
 set_target_properties(multi_audio_mix_48kin PROPERTIES  COMPILE_FLAGS "-DTEST") # ok
 #target_compile_definitions(multi_audio_mix_48kin PRIVATE -DTEST)               #ok
 
+
+file(GLOB five_audio_mix_48kin_list five_audio_mix_48kin.c sound_card_get.c audio_recv.c audio_play.c audio_card_recv.c )
+add_executable(five_audio_mix_48kin ${five_audio_mix_48kin_list})  
+target_link_libraries(five_audio_mix_48kin ${LINK_LIB_LIST})
+#编译目标设置-DTEST宏
+#https://stackoverflow.com/questions/5096881/does-set-target-properties-in-cmake-override-cmake-cxx-flags
+set_target_properties(five_audio_mix_48kin PROPERTIES  COMPILE_FLAGS "-DTEST") # ok
+#target_compile_definitions(five_audio_mix_48kin PRIVATE -DTEST)               #ok
+
+
+
+
+
 #file(GLOB proc_cmd_list proc_cmd.cpp  t_proc_cmd.cpp)
 #add_executable(t_proc_cmd ${proc_cmd_list})  
 #target_link_libraries(t_proc_cmd ${LINK_LIB_LIST})
@@ -224,6 +238,10 @@ target_link_libraries(proc_mix_cmd ${LINK_LIB_LIST})
 file(GLOB test_demux_list test_demux.c demux.c)
 add_executable(test_demux ${test_demux_list})  
 target_link_libraries(test_demux ${LINK_LIB_LIST})
+
+file(GLOB test_audio_recv_play_list test_audio_recv_play.c audio_recv.c audio_play.c audio_card_recv.c sound_card_get.c)
+add_executable(test_audio_recv_play ${test_audio_recv_play_list})  
+target_link_libraries(test_audio_recv_play ${LINK_LIB_LIST})
 
 file(GLOB test_demux_audio_player_list test_demux_audio_player.c demux.c)
 add_executable(test_demux_audio_player ${test_demux_audio_player_list})  
